complete banner section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-3</title>
+    <!-- Tailwind and DaisyUi script -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/3235389376.js" crossorigin="anonymous"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                'book-color': '#ABEF5F',
+                'deep-color': 'rgba(171, 239, 95, 0.5)',
+              }
+            }
+          }
+        }
+      </script> 
+         <!--font family  -->
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Great+Vibes&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<style>
+  .manrope{
+    font-family: "Manrope", sans-serif;
+  }
+</style>
 </head>
-<body>
-    
+<body class="manrope">
+  <!-- header section -->
+    <header class="bg-gradient-to-b from-gray-100 to-gray-50">
+<nav class="md:container mx-auto  bg-transparent ">
+  <div class="navbar ">
+    <div class="navbar-start">
+      <i class="fa-solid fa-arrow-right -rotate-45 bg-book-color p-2 rounded-full"></i>
+           <a class="btn btn-ghost text-xl font-bold">Rinterio</a>
+    </div>
+    <div class="navbar-center hidden lg:flex">
+      <ul class="menu menu-horizontal px-1">
+        <li class="font-bold"><a>Home</a></li>
+        <li class="text-gray-600"><a>Services</a></li>
+        <li class="text-gray-600"><a>Portfolio</a></li>
+        <li class="text-gray-600"><a>Blogs</a></li>
+        <li class="text-gray-600"><a>Contact Us</a></li>
+      </ul>
+    </div>
+        <div class="navbar-end ">
+          <div class="hidden md:flex mr-4 space-x-2">
+            <i class="fa-solid fa-magnifying-glass text-xl bg-white rounded-full p-2 text-gray-600"></i>
+          <i class="fa-solid fa-cart-shopping text-xl  bg-white rounded-full p-2 text-gray-600"></i>
+          </div>
+      <div class="bg-book-color px-3 py-2 rounded-3xl hidden md:flex">
+        <a class="font-bold mr-2">Book Consult</a>
+      <i class="fa-solid fa-arrow-right -rotate-45 bg-black p-2 rounded-full text-white"></i>
+      </div>
+      <i class="fa-solid fa-bars lg:hidden text-xl text-gray-600 ml-4"></i>
+    </div>
+  </div>
+</nav>
+<!-- banner section -->
+ <section class="md:container mx-auto text-center p-8 md:p-12 lg:p-16">
+  <div class="flex justify-center mb-5"><img class="" src="./assets/banner.png" alt=""></div>
+  <h1 class="text-5xl lg:text-7xl font-bold ">A barn house of this design has a striking appearance</h1>
+  <p class="text-gray-700 py-7 w-10/12 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+  <button class="bg-deep-color px-4 py-2 rounded-3xl">View Details<i class="fa-solid fa-arrow-right -rotate-45 bg-book-color p-2 rounded-full ml-2"></i></button>
+  
+  </div>
+ </section>
+    </header>
+    <!-- main section -->
+     <main class="my-12 bg-gray-400">
+<div><img src="assets/Vector.png" alt=""></div>
+     </main>
+     <!-- footer section   -->
 </body>
 </html>
