About section done

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body class="manrope">
   <!-- header section -->
-    <header class="bg-gradient-to-b from-gray-100 to-gray-50">
+    <header class="bg-gradient-to-b from-gray-100 to-gray-50 ">
 <nav class="md:container mx-auto  bg-transparent ">
   <div class="navbar ">
     <div class="navbar-start">
@@ -55,10 +55,7 @@
             <i class="fa-solid fa-magnifying-glass text-xl bg-white rounded-full p-2 text-gray-600"></i>
           <i class="fa-solid fa-cart-shopping text-xl  bg-white rounded-full p-2 text-gray-600"></i>
           </div>
-      <div class="bg-book-color px-3 py-2 rounded-3xl hidden md:flex">
-        <a class="font-bold mr-2">Book Consult</a>
-      <i class="fa-solid fa-arrow-right -rotate-45 bg-black p-2 rounded-full text-white"></i>
-      </div>
+      <div class=" hidden md:flex"> <button class="bg-book-color px-4 py-2 rounded-3xl">Book Consult<i class="fa-solid fa-arrow-right -rotate-45 bg-black p-2 rounded-full ml-2 text-white"></i></button></div>
       <i class="fa-solid fa-bars lg:hidden text-xl text-gray-600 ml-4"></i>
     </div>
   </div>
@@ -74,8 +71,41 @@
  </section>
     </header>
     <!-- main section -->
-     <main class="my-12 bg-gray-400">
-<div><img src="assets/Vector.png" alt=""></div>
+     <main class=" bg-gray-100 ">
+<!-- about section -->
+ <section class="mb-12">
+<div class="p-7 hidden lg:flex"><img src="./assets/Vector.png" alt=""></div>
+<!-- te&ima part -->
+<div class="md:container mx-auto lg:flex p-8 lg:p-3">
+<!-- text-part -->
+ <div class="flex-1">
+  <button class="bg-white px-2 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>About Us</button>
+  <h2 class="text-5xl font-bold lg:w-11/12 xl:w-5/6 2x py-5 xl:mb-6">We design thoughtful, liveable spaces</h2>
+  <p class="lg:w-5/6 xl:mb-6">The barn house captivates with its blend of rustic charm and  
+    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+  <!-- first flex -->
+   <div class="flex bg-white p-5  my-5  xl:my-7 lg:w-5/6 gap-4 rounded-xl">
+<div><img src="./assets/commercial.png" alt=""></div>
+<div>
+  <h3 class="text-xl font-bold">Commercial</h3>
+  <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
+</div>
+   </div>
+  <!-- second flex -->
+   <div class="flex bg-white p-5  mb-8 xl:my-7 lg:w-5/6 gap-4 rounded-xl">
+<div><img class="" src="./assets/residential.png" alt=""></div>
+<div>
+  <h3 class="text-xl font-bold">Residential</h3>
+  <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
+</div>
+   </div>
+   
+ </div>
+ <!-- image part -->
+<div><img class="w-full flex-1" src="./assets/Rectangle.png" alt=""></div>
+    <!-- . -->
+</div>
+ </section>
      </main>
      <!-- footer section   -->
 </body>
