work process section complete

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 clifford: '#da373d',
                 'book-color': '#ABEF5F',
                 'deep-color': 'rgba(171, 239, 95, 0.5)',
+                'pink-color': 'rgba(231, 193, 211, 1)',
+                'yellow-color': 'rgba(239, 218, 110, 1)',
+                'green-color': 'rgba(164, 218, 195, 1)',
+                'blue-color': 'rgba(119, 170, 234, 1)',
               }
             }
           }
@@ -73,8 +77,8 @@
     <!-- main section -->
      <main class=" bg-gray-100 ">
 <!-- about section -->
- <section class="mb-12">
-<div class="p-7 hidden lg:flex"><img src="./assets/Vector.png" alt=""></div>
+ <section class="mb-12 ">
+<div class="p-10 hidden lg:flex"><img src="./assets/Vector.png" alt=""></div>
 <!-- te&ima part -->
 <div class="md:container mx-auto lg:flex p-8 lg:p-3">
 <!-- text-part -->
@@ -106,6 +110,61 @@
     <!-- . -->
 </div>
  </section>
+ <!-- work process section-->
+  <section class="md:container mx-auto  pt-10 pb-20">
+    <div class="text-center">
+      <button class="bg-white px-4 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>How we works</button>
+<h2 class="text-5xl font-bold my-5">Our Works Process</h2>
+<p class="lg:w-3/6 mx-auto text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+    </div>
+<!-- Card part -->
+ <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-6 p-10 md:p-0">
+  <!-- card-1 -->
+  <div class="card bg-pink-color  shadow-xl p-5">
+          <div class=""><img
+        src="./assets/concept.png"
+        alt="Shoes" class=""/></div>
+        <div class="">
+      <h2 class="card-title font-bold my-2"> Concept </h2>
+      <p class="text-gray-600">The barn house captivates <br> with its blend of rustic charm and modern.</p>
+          </div>
+  </div>
+<!-- end -->
+  <!-- card-2 -->
+  <div class="card bg-yellow-color shadow-xl p-5">
+          <div class=""><img
+        src="./assets/flow-chart.png"
+        alt="Shoes" class=""/></div>
+        <div class="">
+      <h2 class="card-title font-bold my-2"> Design Process </h2>
+      <p class="text-gray-600">The barn house captivates <br> with its blend of rustic charm and modern.</p>
+          </div>
+  </div>
+<!-- end -->
+  <!-- card-3 -->
+  <div class="card bg-green-color  shadow-xl p-5">
+          <div class=""><img
+        src="./assets/vision.png"
+        alt="Shoes" class=""/></div>
+        <div class="">
+      <h2 class="card-title font-bold my-2"> Supervision </h2>
+      <p class="text-gray-600">The barn house captivates <br> with its blend of rustic charm and modern.</p>
+          </div>
+  </div>
+<!-- end -->
+  <!-- card-4 -->
+  <div class="card bg-blue-color  shadow-xl p-5">
+          <div class=""><img
+        src="./assets/budget-planning.png"
+        alt="Shoes" class=""/></div>
+        <div class="">
+      <h2 class="card-title font-bold my-2"> Budget Planning </h2>
+      <p class="text-gray-600">The barn house captivates <br> with its blend of rustic charm and modern.</p>
+          </div>
+  </div>
+<!-- end -->
+ </div>
+  </section>
      </main>
      <!-- footer section   -->
 </body>
