complete articles and news section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,106 @@
 <!-- end -->
  </div>
   </section>
+  <!-- latest portfolio section -->
+   <section class="bg-white py-20 ">
+    <div class="text-center">
+      <button class="bg-deep-color px-4 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>Explore our Latest works</button>
+<h2 class="text-5xl font-bold my-5">Our Latest Portfolio</h2>
+<p class="lg:w-3/6 mx-auto text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+    </div>
+    <!-- img and card part -->
+     <div class="md:container mx-auto">
+<div class=" grid grid-cols-1 md:grid-cols-2  lg:grid-cols-3 grid-rows-1 gap-2">
+  <!-- first row -->
+ <div class=" md:flex gap-4 border border-1 border-gray-800 col-span-2 p-5 rounded-3xl">
+  <!-- img -->
+   <div class="w-screen lg::w-2/3"><img class="" src="./assets/img1.png" alt="" class=""></div>
+   <!-- text -->
+    <div class=""><h3 class="text-xl font-bold">Commercial</h3>
+      <p class=" lg:my-5 w-5/6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+     <button class="bg-white  rounded-3xl font-bold">View Details<i class="fa-solid fa-arrow-right -rotate-45 bg-book-color p-2 rounded-full ml-2"></i></button></div>
+     </div>
+     <div class="p-5 border border-1 border-gray-500 rounded-3xl"><img class="w-full" src="./assets/img2.png" alt=""></div>
+<!-- second -->
+  </div>
+ 
+ <!-- end -->
+     </div>
+   </section>
+   <!-- articles and news section -->
+    <section class="p-12 lg:p-24">
+      <!-- header -->
+      <div class="text-center p-5">
+        <button class="bg-deep-color px-4 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>Rinterio News</button>
+        <h2 class="text-5xl font-bold my-5">Read Our Articles and News</h2>
+        <p class="lg:w-3/6 mx-auto text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      </div>
+      <!-- card -->
+       <div class="md:container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 ">
+        <!-- card 1 -->
+        <div class="card bg-base-100  shadow-xl ">
+          <div class="card-body">
+        <figure>
+        <img
+        src="./assets/article1.png"
+        alt="Shoes" />
+        </figure>
+        <div class="flex gap-4 mt-3">
+        <div class="flex gap-2"><i class="fa-solid fa-calendar-days"></i>
+        <small>July14, 2024</small></div>
+        <div class="flex gap-2"><i class="fa-solid fa-user"></i>
+        <small>By Admin</small></div>
+        </div>
+        <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+        <p>The barn house captivates with its blend of rustic charm and modern. </p>
+        <button class="bg-white text-left  rounded-3xl font-bold">Read More<i class="fa-solid fa-arrow-right -rotate-45 bg-book-color p-2 rounded-full ml-2"></i></button>
+        </div>
+        </div>
+         <!-- end -->
+        <!-- card 2 -->
+        <div class="card bg-base-100  shadow-xl ">
+          <div class="card-body">
+        <figure>
+        <img
+        src="./assets/article2.png"
+        alt="Shoes" />
+        </figure>
+        <div class="flex gap-4 mt-3">
+        <div class="flex gap-2"><i class="fa-solid fa-calendar-days"></i>
+        <small>July14, 2024</small></div>
+        <div class="flex gap-2"><i class="fa-solid fa-user"></i>
+        <small>By Admin</small></div>
+        </div>
+        <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+        <p>The barn house captivates with its blend of rustic charm and modern. </p>
+        <button class="bg-white text-left  rounded-3xl font-bold">Read More<i class="fa-solid fa-arrow-right -rotate-45 bg-book-color p-2 rounded-full "></i></button>
+        </div>
+        </div>
+         <!-- end -->
+        <!-- card 3 -->
+        <div class="card bg-base-100  shadow-xl ">
+          <div class="card-body">
+        <figure>
+        <img
+        src="./assets/article3.png"
+        alt="Shoes" />
+        </figure>
+        <div class="flex gap-4 mt-3">
+        <div class="flex gap-2"><i class="fa-solid fa-calendar-days"></i>
+        <small>July14, 2024</small></div>
+        <div class="flex gap-2"><i class="fa-solid fa-user"></i>
+        <small>By Admin</small></div>
+        </div>
+        <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+        <p>The barn house captivates with its blend of rustic charm and modern. </p>
+        <button class="bg-white text-left  rounded-3xl font-bold">Read More<i class="fa-solid fa-arrow-right -rotate-45 bg-book-color p-2 rounded-full "></i></button>
+        </div>
+        </div>
+         <!-- end -->
+       </div>
+      </section>
      </main>
      <!-- footer section   -->
+     <footer></footer>
 </body>
 </html>
