table section done

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
    <!-- articles and news section -->
     <section class="p-12 lg:p-24">
       <!-- header -->
-      <div class="text-center p-5">
+      <div class="text-center p-5 ">
         <button class="bg-deep-color px-4 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>Rinterio News</button>
         <h2 class="text-5xl font-bold my-5">Read Our Articles and News</h2>
         <p class="lg:w-3/6 mx-auto text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -262,7 +262,26 @@
         </div>
          <!-- end -->
        </div>
-      </section>
+      </section >
+      <!-- table section -->
+       <section class="bg-[url('/assets/bg.jpg')]  w-full bg-cover bg-center">
+        <!-- head -->
+        <div class="text-center p-5 pt-20">
+          <button class="bg-deep-color px-4 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>Let’s Connect</button>
+          <h2 class="text-5xl font-bold my-5">Let’s Discuss Next Project</h2>
+          <p class="lg:w-3/6 mx-auto text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <!-- table -->
+           <div class="md:container mx-auto grid grid-cols-1 lg:grid-cols-2  gap-5 p-5 lg:px-20 lg:pb-20 lg:pt-10">
+            <div ><input type="text" placeholder="First Name*" class="input input-bordered w-full rounded-full " /></div>
+            <div><input type="text" placeholder="Last Name*" class="input input-bordered w-full rounded-full" /></div>
+            <div><input type="text" placeholder="Phone Number*" class="input input-bordered w-full rounded-full" /></div>
+            <div><input type="text" placeholder="Email Number*" class="input input-bordered w-full rounded-full" /></div>
+            <div class="col-span-2 "><textarea
+              placeholder="Write your message here"
+              class="textarea textarea-bordered textarea-lg w-full rounded-2xl"></textarea></div>
+            <div class="bg-book-color col-span-2 rounded-full p-2"><strong>Send Mail</strong><i class="fa-solid fa-arrow-right ml-2 rounded-full bg-black text-white p-2 -rotate-45"></i></div>
+             </div>
+       </section>
      </main>
      <!-- footer section   -->
      <footer></footer>
