added some requirement

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 </div>
  </section>
  <!-- work process section-->
-  <section class="md:container mx-auto  pt-10 pb-20">
-    <div class="text-center">
+  <section class="md:container mx-auto  pt-10 pb-20 md:p-10">
+    <div class="text-center px-5">
       <button class="bg-white px-4 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>How we works</button>
 <h2 class="text-2xl md:text-5xl font-bold my-5">Our Works Process</h2>
 <p class="lg:w-3/6 mx-auto text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -169,14 +169,14 @@
   </section>
   <!-- latest portfolio section -->
    <section class="bg-white py-20 ">
-    <div class="text-center">
+    <div class="text-center p-5">
       <button class="bg-deep-color px-4 py-1 rounded-2xl"><i class="fa-solid fa-arrow-right  mr-2"></i>Explore our Latest works</button>
-<h2 class="text-5xl font-bold my-5">Our Latest Portfolio</h2>
+<h2 class="text-3xl md:text-5xl font-bold my-5">Our Latest Portfolio</h2>
 <p class="lg:w-3/6 mx-auto text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
     </div>
     <!-- card section -->
     <div class="grid grid-cols-1 md:grid-cols-12 p-8 gap-5 md:container mx-auto">
-      <!-- === -->
+      <!-- first -->
       <div
         class="border border-1 border-gray-300 rounded-xl p-4 grid grid-cols-1 md:grid-cols-5 md:col-span-8 gap-4"
       >
@@ -201,7 +201,7 @@
           </div>
         </div>
       </div>
-      <!-- === -->
+      <!-- second -->
       <div
         class="p-4 sm:block md:col-span-4 rounded-xl border border-gray-300  "
       >
@@ -211,7 +211,7 @@
           alt=""
         />
       </div>
-      <!-- === -->
+      <!-- third -->
       <div
         class="p-4 sm:block  md:col-span-3 rounded-xl border border-gray-300 "
       >
@@ -221,7 +221,7 @@
           alt=""
         />
       </div>
-      <!-- === -->
+      <!-- fourth -->
       <div
         class="border border-gray-300 block md:flex rounded-xl p-4 space-x-4 sm:block  md:col-span-6 "
       >
@@ -245,7 +245,7 @@
           </div>
         </div>
       </div>
-      <!-- === -->
+      <!-- last -->
       <div
         class="p-4 sm:block md:col-span-3 rounded-xl border border-gray-300 "
       >
